[package]
name = "rustmart"
version = "0.1.0"
authors = ["William Mclt <william.mauclet+gitlab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2"
js-sys = "0.3"
rand =  { version = "0.7", features = ["wasm-bindgen"] }